# phishing-detection

./: .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  COMPLETE_PACKAGE_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_FINAL.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPRECATED_ACTIONS_FIXED.md  DEVSECOPS_DELIVERY_SUMMARY.md  DEVSECOPS_DOCUMENTATION_INDEX.md  DEVSECOPS_QUICK_START.md  DISK_SPACE_FIXED.md  DOCKER_DEPLOYMENT_SUCCESS.md  DOCKER_INSTALLATION_GUIDE.md  Dockerfile  Dockerfile.dashboard  FINAL_DELIVERY_REPORT.md  FINAL_PROJECT_SUMMARY.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FULL_DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_FIXED.md  GITHUB_ACTIONS_STATUS.md  IMPLEMENTATION_ROADMAP.md  ISSUES_RESOLVED.md  KUBERNETES_READY.md  PHASE1_SECURITY_IMPLEMENTATION.md  PHASE2_CICD_IMPLEMENTATION.md  PHASE3_CONTAINERIZATION.md  PHASE4_MONITORING.md  PHASE5_KUBERNETES.md  PRODUCTION_ENHANCEMENT_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_DEVSEC_SCAN.md  README.md  (+32 more)
browser_extension/: INSTALL_EXTENSION.md  TEST_EXTENSION.md  background.js  content.js  popup.html  popup.js  warning.html
dashboard/: devsec_dashboard.html  index.html
doc/: BROWSER_MONITOR_FIX_REPORT.md  COMPREHENSIVE_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  DIAGNOSTIC_GUIDE.md  EXTENSION_AND_MONITORING_FIXES.md  FULL_TEST_SUMMARY.txt  HOW_TO_RUN_TESTS.md  START_TESTING_HERE.txt  TESTING_COMPLETE_SUMMARY.txt  TEST_ALL_FUNCTIONALITY.py  TEST_DATA_AND_ERRORS.py  TEST_DOCUMENTATION_INDEX.md  TEST_EXTENSION_INTEGRATION.py
docs/: API.md  (+1 more)
(+56 files in other folders)
